# drupal_cracker

./: Cargo.toml  README.md  password.php
src/: main.rs  phpass.rs
